fix: fixed z-index for card img and added wishlist logic

--- a/src/components/Navbar/MobileNavbar/index.css
+++ b/src/components/Navbar/MobileNavbar/index.css
@@ -1,5 +1,5 @@
 .mobile-navbar {
-  isolation: isolate;
+  z-index: 100;
   padding: 1rem;
   display: flex;
   justify-content: space-around;
